<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainTheme"
    tools:context="cs161.mortgagecalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/fontColor"
            android:textSize="35sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/dividerColor"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/fontColor"
            android:textSize="15sp"
            android:text="@string/amt_borrowed"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amt_borrowed_hint"
                android:id="@+id/edittext_amount_borrowed"
                android:inputType="numberDecimal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interest_rate"
                android:textColor="@color/fontColor"
                android:textSize="15sp"
                android:id="@+id/textview_loan_rate"/>
            <SeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="20"
                android:progress="10"
                android:textColor="@color/fontColor"
                android:textSize="15sp"
                android:id="@+id/seekbar_loan_rate"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/fontColor"
            android:textSize="15sp"
            android:text="@string/loan_term"/>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/radiogroup_loan_term"
            android:checkedButton="@+id/radiobutton_15">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_15"
                android:id="@+id/radiobutton_15"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_20"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_30"

                />
        </RadioGroup>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="2"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tax_insurance_chk_box"
            android:textColor="@color/fontColor"
            android:textSize="15sp"/>
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:id="@+id/checkbox_tax_insurance"/>


    </LinearLayout>
        <Button
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/calculate"
            android:textColor="@color/fontColor"
            android:background="@color/dividerColor"
            android:textSize="15sp"
            android:id="@+id/button_calculate"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColorLink="@color/dividerColor"
            android:id="@+id/textview_result"
            android:textColor="@color/fontColor"

            android:textSize="35sp"/>
    </LinearLayout>

</RelativeLayout>
